--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,150 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Montserrat:wght@600&display=swap');
+
+body{
+  background-color: lightgray;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.home-container{
+  background-color: #002855;
+  min-width: 100vh;
+  min-height: 100vh;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.home{
+  display: flex;
+  align-items: center;
+  width: 600px;
+  height: 600px;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%; 
+  margin-left: -300px;
+  margin-top: -300px;
+  font-family: 'Montserrat', sans-serif;
+  color: #d3d3d3;
+  font-size: medium;
+}
+
+.logo {
+  text-align: center;
+  width: 150px;
+  height: 150px;
+}
+
+
+button {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid lightgray;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:after {
+  content: "";
+  background-color: darkgray;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+button:hover:after {
+  top: 0px;
+  left: 0px;
+}
+
+@media (min-width: 768px) {
+  button {
+    padding: 13px 50px 13px;
+  }
+
+  .home{
+    display: flex;
+    align-items: center;
+    width: 600px;
+    height: 600px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%; 
+    margin-left: -300px;
+    margin-top: -300px;
+    font-family: 'Montserrat', sans-serif;
+    color: #d3d3d3;
+    font-size: medium;
+  }
+
+  .logo {
+    width: 300px;
+    height: 300px;
+  }
+
+}
+
+.card {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  border: 3px solid black;
+  color: black;
+  height: 350px;
+  width: 350px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.card:hover {
+  border-color: #2e5a88;
+  color: #2e5a88;
+  cursor: pointer;
+}
+
+.card-img-top{
+  height: 100%;
+  width: 100%;
+  border-bottom: 3px solid black;
+}
+
+.card-text{
+  margin: auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.description {
+  font-size: smaller;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.banner {
+  width: 99%;
+  height: 10%;
+  border: 5px solid black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.banner-img-top {
+  border-radius: 100%;
+  height: 10em;
+  width: 10em;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-images{
+  height: 10em;
+  width: 10em;
 }
