--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ header Link{
   position: absolute;
   left: 50%;
   top: 50%; 
-  margin-left: -300px;
+  margin-left: -501px;
   margin-top: -300px;
   font-family: 'Montserrat', sans-serif;
   color: #d3d3d3;
@@ -88,6 +88,12 @@ header Link{
   text-align: center;
   width: 150px;
   height: 150px;
+  margin-right: -30px;
+  margin-left: 50px;
+}
+
+.phrase {
+
 }
 
 
