--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ header {
 
 header button {
   align-items: center;
-  /* background: #f5f5fa; */
+  background: #002855;
   border: 0;
   border-radius: 8px;
   box-shadow: -10px -10px 30px 0 #fff,10px 10px 30px 0 #1d0dca17;
@@ -51,9 +51,30 @@ header button:hover {
   box-shadow: -15px -15px 30px 0 #fff, 15px 15px 30px 0 #1d0dca17;
 }
 
+
 @media (min-width: 768px) {
   header button {
     padding: 24px;
+  }
+}
+@media (max-width: 600px) {
+  header button {
+    padding: 8px;
+  }
+
+  header button {
+    box-shadow: -5px -5px 15px 0 #fff,5px 5px 15px 0 #1d0dca17;
+  }
+
+  header button:hover {
+    background: #f8f8ff;
+    color: #002855;
+    box-shadow: -5px -5px 15px 0 #fff,5px 5px 15px 0 #1d0dca17;
+  }
+
+  .nav-logo {
+    height: 1em;
+    box-shadow: -5px -5px 15px 0 #fff,5px 5px 15px 0 #1d0dca17;
   }
 }
 
@@ -102,7 +123,7 @@ header button:hover {
 }
 
 
-button {
+.button-52 {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 200;
@@ -118,7 +139,7 @@ button {
   touch-action: manipulation;
 }
 
-button:after {
+.button-52:after {
   content: "";
   background-color: darkgray;
   width: 100%;
@@ -130,7 +151,7 @@ button:after {
   transition: 0.2s;
 }
 
-button:hover:after {
+.button-52:hover:after {
   top: 0px;
   left: 0px;
 }
