--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,9 @@ button:hover {
 .button-52,
 .banner > button,
 .post-button,
-.delete-post-button {
+.delete-post-button,
+.hashtag-button,
+.forum-form-fields > button {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 200;
@@ -307,17 +309,39 @@ input{
   font-family: 'Montserrat', sans-serif;
 }
 
-.forum-form{
+/* .forum-form{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-}
+} */
 
 .forum-form-fields {
-  grid-column-start: 2;
-  grid-row-start: 2;
   text-align: center;
-  border: 2px solid black
+  color: white;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  width: 90%;
+  padding: 20px;
+  border-radius: 25px;
+  background: linear-gradient(315deg, #002b5b, #00244d);
+  box-shadow:  -20px -20px 33px #001022,
+              20px 20px 33px #004088;
+}
+
+.forum-form-fields > button {
+  color: white;
+  justify-self: center;
+
+}
+
+.forum-form-fields > button:hover {
+  background-color: white;
+  color: #001022;
+}
+
+.hashtag-input{
+  width: 80%;
+  padding-right: 10px;
 }
 
 @media (min-width: 768px) {
